--- a/resources/sass/product.scss
+++ b/resources/sass/product.scss
@@ -317,6 +317,7 @@ body.navi-active .navi_list-item:nth-child(5) {
   border-top: none;
   border-right: none;
   border-left: none;
+    margin-top: 5px;
 }
 
 .share{
