--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -264,6 +264,8 @@ body {
   background-color: white;
   border: none;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.575);
+  text-decoration: none;
+  color: black;
 }
 
 .btn-action:hover {
